# bora

./: Makefile  README.md  RoadMap.md  Spec.md  cabal.project.scripts  flake.nix  roadmap.md  spec.md
scripts/: bora-scripts.cabal
scripts/app/: Main.hs
scripts/src/: Bora.hs
scripts/test/: Spec.hs
