cabal-version:      3.0
name:               bora-scripts
version:            0.1
author:             Bora
build-type:         Simple
tested-with:        GHC ==9.2.1

source-repository head
  type:     git
  location: https://github.com/bora-finance/bora

-- Common sections
common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists

  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

  build-depends:
    , base      >=4.14
    , pprelude

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    OverloadedRecordDot
    QualifiedDo

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Bora

  build-depends:
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text
    , aeson
    , generics-sop
    , mtl

  hs-source-dirs:  src

library pprelude
  default-language: Haskell2010
  build-depends:
    , base
    , plutarch

  exposed-modules:  PPrelude
  hs-source-dirs:   src

library script-serialize
  default-language: Haskell2010
  build-depends:
    , base
    , aeson
    , aeson-pretty
    , base16-bytestring
    , bytestring
    , cardano-binary
    , plutus-ledger-api
    , serialise
    , text

  exposed-modules:  Scripts.V1.Serialize
  hs-source-dirs:   src

executable bora-scripts-compile
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , directory
    , filepath
    , plutus-ledger-api
    , script-serialize
    , bora-scripts

  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite bora-scripts-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
  build-depends:
    , containers
    , data-default
    , hedgehog
    , hspec
    , hspec-core
    , plutarch
    , plutarch-test
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , bora-scripts

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
